tests/neg/labelNotFound.scala
//> using options -explain

object Test:
  scala.util.boundary.break(1) // error
